apps/services/media/jellyfin/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-svc
  labels:
    app: jellyfin
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
    - name: http
      port: 80
      targetPort: 8096
      protocol: TCP
